Implement JVM in-process agent components